# karupu-back

./: .gitignore  aerich.ini  pyproject.toml  schema.graphql
app/: main.py
app/api/dependencies/: authentication.py
app/api/routes/: authentication.py  uploader.py
app/api/utils/: request.py
app/core/: config.py  logging.py
app/core/settings/: app.py  base.py  development.py  test.py
app/db/: config.py  register.py
app/db/repositories/: parts.py  projects.py  teams.py
app/db/table/: auth.py  base.py  karupu.py  validators.py
app/graphql/: __init__.py  config.py  types.py  utils.py
app/graphql/dependencies/: authentication.py
app/graphql/loaders/: __init__.py  base.py  generator.py  loaders.py
app/graphql/permissions/: authentication.py  feedbacks.py  projects.py  teams.py
app/graphql/schemas/: __init__.py
app/graphql/schemas/mutations/: __init__.py  project.py
app/graphql/schemas/project/: __init__.py  inputs.py  mutations.py  queries.py
app/graphql/schemas/projects/: inputs.py  mutations.py  queries.py
app/graphql/schemas/queries/: __init__.py
app/graphql/schemas/teams/: inputs.py  mutations.py
app/graphql/schemas/user/: queries.py
app/graphql/wrappers/: countviews.py  pagination.py
app/helpers/: __init__.py  generic.py
app/models/: base.py  feedbacks.py  parts.py  projects.py  teams.py
app/resources/: strings.py
app/services/aws/: config.py  uploader.py
tests/: client.py  conftest.py  faker.py  init_db.py  test.py  utils.py
tests/db/: factories.py
tests/db/factory/: __init__.py  base.py
tests/graphql/: generator.py
tests/graphql/queries/: feedbacks.py  projects.py  teams.py
tests/test_project/: test_feedback.py  test_project.py
tests/test_team/: test_team.py
